# PPCA-Raytracer-2022

./: LICENSE  README.md
.github/workflows/: cargo.yml
raytracer/: Cargo.toml
raytracer/src/: main.rs  ray.rs  scene.rs  utility.rs  vec3.rs
raytracer/src/basic/: camera.rs  color.rs  mod.rs  onb.rs  ray.rs  vec3.rs
raytracer/src/bvh/: aabb.rs  bvh_node.rs  mod.rs
raytracer/src/hittable/: aarect.rs  constant_medium.rs  cuboid.rs  hittable_list.rs  mod.rs  obj_model.rs  sphere.rs  triangle.rs
raytracer/src/hittable/instance/: flip_face.rs  mod.rs  motion.rs  rotation.rs  translation.rs
raytracer/src/material/: dielectric.rs  diffuse_light.rs  isotropic.rs  lambertian.rs  metal.rs  mod.rs
raytracer/src/pdf/: cosine_pdf.rs  hittable_pdf.rs  mixture_pdf.rs  mod.rs
raytracer/src/texture/: checker_texture.rs  image_texture.rs  mod.rs  noise_texture.rs  obj_texture.rs  solid_color.rs
raytracer/src/utility/: export.rs  mod.rs  multi_thread.rs
